--- a/generator/cardano-sl-generator.cabal
+++ b/generator/cardano-sl-generator.cabal
@@ -136,6 +136,7 @@ test-suite cardano-generator-test
                      , formatting
                      , hspec
                      , lens
+                     , safe-exceptions
                      , serokell-util
                      , universum >= 0.1.11
                      , unordered-containers
